[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "dask-remote"
version = "0.0.1"
description = "Dask cluster based on a Kubernetes-native Deployment"
authors = ["Igor Gotlibovych <igor@octopus.energy>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "*"
distributed = "^2.9"
kubernetes_asyncio = { version = "^10.0", optional = true }
fastapi = { version = "*", optional = true }
uvicorn = { version = "*", optional = true }
# TODO: to be removed once migrated onto Python 3.8
typing_extensions = "*"

[tool.poetry.extras]
k8s = ["kubernetes_asyncio"]
api = ["fastapi"]
uvicorn = ["uvicorn"]

[tool.poetry.dev-dependencies]
# Format
isort = "*"
black = {version = "*", allow-prereleases = true}
# Linter
pydocstyle = "*"
flake8 = "*"
mypy = "*"
# Testing
pytest = "*"
pytest-mock = "*"
pytest-asyncio = "*"
# Debugging
ipdb = "*"
ipython = "*"

[tool.isort]
line_length = 99
multi_line_output = 3
lines_after_imports = 2
default_section = "THIRDPARTY"
known_first_party = "dask_remote"
sections = "STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
include_trailing_comma = "True"
force_grid_wrap = 0
use_parentheses = "True"
skip=".git, .pytest_cache, .mypy_cache, .tox, .venv, build, dist"

[tool.black]
line-length = 99
skip-numeric-underscore-normalization = "True"
target_version = ['py37']
include = '\.pyi?$'
exclude = '(\.git|\.pytest_cache|\.mypy_cache|\.tox|\.venv|build|dist|docs)'
