[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"

[tool.poetry]
# Description
name = "dask-remote"
version = "0.0.1-alpha.1"
description = "Dask cluster based on a Kubernetes-native Deployment"
# Credentials
license = "MIT"
authors = ["Octopus Energy <tech@octopus.energy>"]
homepage = "https://github.com/octoenergy/dask-remote"
# Package data
packages = [
    { include = "dask_remote", from = "src" },
]
exclude = [
    "src/dask_remote/runner/README.md",
    "src/dask_remote/deployment/README.md",
]
# Distribution
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.7"
requests = "*"
distributed = "*"
kubernetes_asyncio = { version = "^10.0", optional = true }
fastapi = { version = "*", optional = true }
uvicorn = { version = "*", optional = true }
# TODO: to be removed once migrated onto Python 3.8
typing_extensions = "*"

[tool.poetry.extras]
deployment = ["kubernetes_asyncio"]
runner = ["fastapi", "uvicorn"]

[tool.poetry.dev-dependencies]
# Format
isort = "*"
black = {version = "*", allow-prereleases = true}
# Linter
pydocstyle = "*"
flake8 = "*"
mypy = "*"
# Testing
pytest = "*"
pytest-mock = "*"
pytest-asyncio = "*"
# Debugging
ipdb = "*"
ipython = "*"
# Packaging
dephell = "*"

[tool.isort]
line_length = 99
multi_line_output = 3
lines_after_imports = 2
default_section = "THIRDPARTY"
known_first_party = "dask_remote"
sections = "STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"

[tool.black]
line-length = 99
target_version = ['py37']

[tool.dephell.main]
# Read from poetry format
from = {format = "poetry", path = "pyproject.toml"}
# And convert into setup.py
to = {format = "setuppy", path = "setup.py"}
